--- a/frontend/watering-system/src/index.scss
+++ b/frontend/watering-system/src/index.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
 html {
 
     body {
@@ -7,5 +9,5 @@ html {
 }
 
 * {
-    border-radius: 0!important;
+    font-family: 'Open Sans', sans-serif;
 }
