--- a/frontend/watering-system/src/index.scss
+++ b/frontend/watering-system/src/index.scss
@@ -1,13 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
-html {
-
-    body {
-        padding-top: 62px;
-    }
-
-}
-
 * {
     font-family: 'Open Sans', sans-serif;
+}
+
+.padding-top-62 {
+    padding-top: 62px;
 }
