--- a/frontend/watering-system/src/components/motor-page/motorpage.scss
+++ b/frontend/watering-system/src/components/motor-page/motorpage.scss
@@ -5,13 +5,14 @@
     text-align:center;
     font-size:24px;
     padding-bottom:30px;
+    padding-top:20px;
     font-weight:600;
 }
 
 .MotorList {
-    width:100%;
-    padding:0 250px;
-    text-align:left;
+    width:60%;
+    margin:auto;
+    text-align:center;
 }
 .MotorList .thead-box{
     background-color:#e9ecef;
@@ -30,6 +31,7 @@
 .MotorLabel .turnOnMotor{
     text-align:center;
     padding:25px 0;
+    background-color:#e9ecef;
 }
 .MotorLabel .turnOnMotor .motorInput{
     margin-right:30px;
@@ -39,6 +41,13 @@
 }
 
 @media only screen and (max-width:768px){
+    .MotorPage h1{
+        font-size:18px;
+    }
+    .MotorList{
+        width:90%;
+        font-size:15px;
+    }
     .col-4{
         width: 33.33%;
     }
