--- a/frontend/watering-system/src/components/SensorInfo/sensorInfo.scss
+++ b/frontend/watering-system/src/components/SensorInfo/sensorInfo.scss
@@ -6,12 +6,18 @@
     margin:auto;
     padding:20px 100px;
     background-color: rgba(255, 255, 255, 0.7) !important;
+    text-align:center;
 }
 .list-sensor-info h1{
     font-size:24px;
     text-align:center;
-    padding-bottom:30px;
+    padding-bottom:60px;
     font-weight:600;
+}
+.list-sensor-info h4{
+    font-size:18px;
+    padding-bottom:30px ;
+    font-weight:400;
 }
 .list-sensor-info table{
     width:100%;  
@@ -21,6 +27,9 @@
 }
 .list-sensor-info .btn-sensor::after{
     content: "Xem chi tiết";
+}
+.table-detail{
+    margin-top:80px;
 }
 @media only screen and (max-width:1024px){
     .sensor-info{
@@ -38,6 +47,9 @@
         font-size:15px;
     }
     .list-sensor-info button{
+        font-size:15px;
+    }
+    .list-sensor-info h4{
         font-size:15px;
     }
 }
