Add admin controller

--- a/frontend/watering-system/src/components/admin-page/admin.module.scss
+++ b/frontend/watering-system/src/components/admin-page/admin.module.scss
@@ -6,8 +6,12 @@
   bottom: 0;
   left: 0;
   right: 0;
+  height: 100% ;
+  overflow: scroll; 
 }
 
 .AdminCard {
   background-color: rgba(255, 255, 255, 0.9) !important;
+  
+
 }
