Add upperlower and watering

--- a/frontend/watering-system/src/components/motor-page/motordetail.module.scss
+++ b/frontend/watering-system/src/components/motor-page/motordetail.module.scss
@@ -12,3 +12,13 @@
     border:solid black;
     padding:10px;
 }
+.MotorControlHand{
+    visibility: hidden;
+}
+
+.MotorForm{
+    height: 40px;
+    align-self: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
